# alloy

./: .pre-commit-config.yaml  README.md
insight-copilot/: .pre-commit-config.yaml  pyproject.toml
insight-copilot/.github/workflows/: ci.yml
insight-copilot/src/insight_copilot/: __init__.py
insight-copilot/tests/: test_smoke.py
